<resources>
    <string name="app_name">ONE SLIP 2+3 ODDS 100% WIN</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_vip_sub">VipSub</string>
    <string name="title_activity_add_tips">AddTips</string>
    <string name="local_client_nigeria"><u>Local Client (Nigeria)</u></string>
    <string name="international_client"><u>International Client</u></string>
    <string name="western_union_moneygram"><u>Western Union / MoneyGram</u></string>
    <string name="maximise_your_your_earning_with_vip_one_slip_2_3_odds"><u>MAXIMISE YOUR YOUR EARNING WITH VIP ONE SLIP 2+3 ODDS</u></string>
    <string name="sure_tips_vip"><u>SURE TIPS VIP</u></string>
</resources>
