<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".VipSub">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#900"
            android:background="#ffff00"
            android:text="@string/sure_tips_vip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#009"
            android:layout_marginTop="20dp"
            android:text="@string/maximise_your_your_earning_with_vip_one_slip_2_3_odds"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="We don't offer many slips. we offer just ONE SLIP OF 2+3 ODDS  as the case may be and very sure one analzed for our VIP subscribers, Only the Odds given are from a reliable source."/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="We are using telegram as a Channel to forward our odds. Please if you have not yet installed the telegram messenger,please do so as your first stop towards joining our VIP. You can do so by downloading it from Playstore."/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#900"
            android:layout_marginTop="30dp"
            android:text="VIP CHARGE"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="To keep the company running we charge the following"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp"
            android:text="@string/local_client_nigeria"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="To Subscribe"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="PAY 20USD FOR ONE MONTH"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp"
            android:text="Contact phone : +234 08027168109"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:text="After paying send payment details to:"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp"
            android:text="Email: victorezeuchegbu@gmail.com "/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#900"
            android:layout_marginTop="20dp"
            android:text="@string/international_client"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#900"
            android:layout_marginTop="20dp"
            android:text="@string/western_union_moneygram"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="To Subscribe send 20USD to"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="VICTOR ILOABUCHI EZEUCHEGBU"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="Country : Nigeria"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="City: Port Harcourt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp"
            android:text="Phone :+234 08027168109 "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="Amount : 20USD"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:text="After payment send details to "/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp"
            android:text="Email: victorezeuchegbu@gmail.com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:background="#ffff00"
            android:text="Come win with Us"/>



    </LinearLayout>
</ScrollView>
